force-app/main/default/objects/Targets__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current</label>
    <summarizedField>Target_Link__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>Target_Link__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Target_Link__c.Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>