force-app/main/default/objects/Targets__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>IF(
  ISBLANK(Day_Number__c),
  NULL,
  DATE(VALUE(TEXT(Year__c)), 1, 1) + (Day_Number__c - 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is blank, if there&apos;s no Day Number</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>