force-app/main/default/objects/Targets__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>User must match Employee</errorMessage>
        <filterItems>
            <field>$Source.User__c</field>
            <operation>equals</operation>
            <valueField>SFDC_Employee__c.SF_User__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFDC_Employee__c</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>