force-app/main/default/objects/Targets__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>IF(
  /* 1) guard against missing or zero data */
  OR(
    ISNULL(Target__c),
    Target__c = 0,
    ISNULL(Current__c),
    ISNULL(Working_Days_in_Period__c),
    ISNULL(Working_Days_Elapsed__c)
  ),
  /* show nothing until all pieces exist */
  NULL,

  /* 2) if this is the current month, use working-day pace */
  IF(
    AND(
      Year__c = YEAR(TODAY()),
      Month_Number__c = MONTH(TODAY())
    ),
    /* pace-adjusted index: (actual ÷ goal) ÷ (elapsed_workdays ÷ total_workdays) */
    ( Current__c / Target__c ) 
    /
    ( Working_Days_Elapsed__c / Working_Days_in_Period__c ),

    /* 3) otherwise (past or future month) just show plain progress */
    Current__c / Target__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>