force-app/main/default/objects/Targets__c/fields/Month_Status__c.field-meta.xml
<CustomField>
    <fullName>Month_Status__c</fullName>
    <formula>IF(
  OR(
    Year__c &lt; 1,
    Month_Number__c &lt; 1
  ),
  &quot;&quot;,
  IF(
    Year__c &lt; YEAR(TODAY()),
    &quot;Past&quot;,
    IF(
      Year__c &gt; YEAR(TODAY()),
      &quot;Future&quot;,
      IF(
        Month_Number__c &lt; MONTH(TODAY()),
        &quot;Past&quot;,
        IF(
          Month_Number__c &gt; MONTH(TODAY()),
          &quot;Future&quot;,
          &quot;Current&quot;
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Status</label>
    <type>Text</type>
</CustomField>