force-app/main/default/objects/Targets__c/fields/Name_of_User__c.field-meta.xml
<CustomField>
    <fullName>Name_of_User__c</fullName>
    <formula>User__r.FirstName &amp; &quot; &quot; &amp;  User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of User</label>
    <type>Text</type>
</CustomField>