force-app/main/default/objects/Targets__c/fields/Number_of_Target_Links__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Target_Links__c</fullName>
    <label>Number of Target Links</label>
    <summaryForeignKey>Target_Link__c.Target__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>