force-app/main/default/objects/Targets__c/fields/Percent_Current__c.field-meta.xml
<CustomField>
    <fullName>Percent_Current__c</fullName>
    <formula>IF(
  OR(ISBLANK(Current__c), Current__c = 0),
  0,
  Current__c / Number_of_Active_Link_Targets__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>