force-app/main/default/objects/Targets__c/fields/Percent_Target__c.field-meta.xml
<CustomField>
    <fullName>Percent_Target__c</fullName>
    <label>Percent Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>