force-app/main/default/objects/Targets__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <formula>CASE(
  Target_Period__c ,
  
  /* Quarter → last day of quarter */
  &quot;Quarter&quot;,
    DATE(
      Year__c,
      (Quarter_Number__c - 1) * 3 + 4, /* first month of next quarter */
      1
    ) - 1,
  
  /* Month → last day of month */
  &quot;Month&quot;,
    DATE( Year__c, Month_Number__c + 1, 1 ) - 1,
  
  /* Week → Sunday of ISO week */
  &quot;Week&quot;,
    DATE( Year__c, 1, 4 )
    - MOD( WEEKDAY( DATE( Year__c, 1, 4 ) ) + 5, 7 )
    + ( Week_Number__c - 1 ) * 7
    + 6,
  
  /* Day → same as start */
  &quot;Day&quot;,
    DATE( Year__c, 1, 1 ) + Day_Number__c - 1,
  
  /* default */
  NULL
)</formula>
    <label>Period End</label>
    <type>Date</type>
</CustomField>