force-app/main/default/objects/Targets__c/fields/Period_Status__c.field-meta.xml
<CustomField>
    <fullName>Period_Status__c</fullName>
    <formula>IF(
  TODAY() &lt; Period_Start__c,
  &quot;Future&quot;,
  IF(
    TODAY() &gt; Period_End__c,
    &quot;Past&quot;,
    &quot;Current&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Status</label>
    <type>Text</type>
</CustomField>