force-app/main/default/objects/Targets__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF(
  ISPICKVAL(Target_Type__c, &quot;Percentage&quot;),
  IF(Percent_Target__c &gt; 0,
     Percent_Current__c / Percent_Target__c,
     0),
  /* plain number */
  IF(Target__c &gt; 0,
     Current__c / Target__c,
     0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>