force-app/main/default/objects/Targets__c/fields/Remaining_Daily_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Daily_Amount__c</fullName>
    <formula>IF(
  Working_Days_in_Period__c - Working_Days_Elapsed__c &gt; 0,
  (Target__c - Current__c) / (Working_Days_in_Period__c - Working_Days_Elapsed__c),
  Target__c - Current__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Daily Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>