force-app/main/default/objects/Targets__c/fields/Week_Status__c.field-meta.xml
<CustomField>
    <fullName>Week_Status__c</fullName>
    <formula>IF(
  OR(
    Year__c &lt; 1,
    Week_Number__c &lt; 1
  ),
  &quot;&quot;,
  IF(
    Year__c &lt; ISOYEAR(TODAY()),
    &quot;Past&quot;,
    IF(
      Year__c &gt; ISOYEAR(TODAY()),
      &quot;Future&quot;,
      IF(
        Week_Number__c &lt; ISOWEEK(TODAY()),
        &quot;Past&quot;,
        IF(
          Week_Number__c &gt; ISOWEEK(TODAY()),
          &quot;Future&quot;,
          &quot;Current&quot;
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Status</label>
    <type>Text</type>
</CustomField>