force-app/main/default/objects/Targets__c/fields/Working_Days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_Elapsed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Working Days Elapsed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>