force-app/main/default/objects/Targets__c/fields/Working_Days_in_Period__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_in_Period__c</fullName>
    <label>Working Days in Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>