force-app/main/default/objects/Targets__c/validationRules/Require_Week_And_Target_For_Booked_Seats.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Week_And_Target_For_Booked_Seats</fullName>
    <active>true</active>
    <description>When the Target_Metric__c picklist = “Booked Seats”, both Seat_Target__c (lookup) and Week_Number__c (number) must be populated.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Target_Metric__c, &quot;Booked Seats&quot;),
  OR(
    ISBLANK(Target__c),
    ISBLANK(Week_Number__c)
  )
)</errorConditionFormula>
    <errorMessage>“You must select a Seat Target and enter a Week Number when Metric = Booked Seats.”</errorMessage>
</ValidationRule>