force-app/main/default/objects/Targets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Target_Metric__c</columns>
    <columns>Week_Number__c</columns>
    <columns>Target__c</columns>
    <columns>Current__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>