force-app/main/default/objects/Targets__c/listViews/Danish_Capacity_Targets_This_Year.listView-meta.xml
<ListView>
    <fullName>Danish_Capacity_Targets_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Target_Metric__c</columns>
    <columns>Week_Number__c</columns>
    <columns>Target__c</columns>
    <columns>Current__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK</value>
    </filters>
    <filters>
        <field>Target_Metric__c</field>
        <operation>equals</operation>
        <value>Capacity Booked</value>
    </filters>
    <filters>
        <field>Period_Start__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Danish Capacity Targets This Year</label>
</ListView>