force-app/main/default/objects/Targets__c/listViews/Danish_Rebooked_Seats_Targets.listView-meta.xml
<ListView>
    <fullName>Danish_Rebooked_Seats_Targets</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Target_Metric__c</columns>
    <columns>Target__c</columns>
    <columns>Current__c</columns>
    <columns>Progress__c</columns>
    <columns>Month_Number__c</columns>
    <columns>Number_of_Active_Link_Targets__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Metric__c</field>
        <operation>equals</operation>
        <value>Rebooked Seats</value>
    </filters>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK</value>
    </filters>
    <label>Danish Rebooked Seats Targets</label>
</ListView>