force-app/main/default/objects/Targets__c/listViews/Danish_Revenue_Targets.listView-meta.xml
<ListView>
    <fullName>Danish_Revenue_Targets</fullName>
    <columns>NAME</columns>
    <columns>Period_Start__c</columns>
    <columns>Period_End__c</columns>
    <columns>Current__c</columns>
    <columns>Target__c</columns>
    <columns>Progress__c</columns>
    <columns>Index__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK</value>
    </filters>
    <filters>
        <field>Target_Metric__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </filters>
    <label>Danish Revenue Targets</label>
</ListView>