force-app/main/default/objects/Targets__c/listViews/Danish_Revenue_Targets_Last_Month.listView-meta.xml
<ListView>
    <fullName>Danish_Revenue_Targets_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Target_Metric__c</columns>
    <columns>Target__c</columns>
    <columns>Progress__c</columns>
    <columns>Current__c</columns>
    <columns>Index__c</columns>
    <columns>Employee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK</value>
    </filters>
    <filters>
        <field>Target_Metric__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </filters>
    <filters>
        <field>Period_Start__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Danish Revenue Targets Last Month</label>
</ListView>