force-app/main/default/objects/Targets__c/listViews/Meetings_Booked_Targets.listView-meta.xml
<ListView>
    <fullName>Meetings_Booked_Targets</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Target_Metric__c</columns>
    <columns>Number_of_Active_Link_Targets__c</columns>
    <columns>Current__c</columns>
    <columns>Percent_Current__c</columns>
    <columns>Percent_Target__c</columns>
    <columns>Progress__c</columns>
    <columns>Month_Number__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Metric__c</field>
        <operation>equals</operation>
        <value>Meetings Booked</value>
    </filters>
    <label>Meetings Booked Targets</label>
</ListView>