force-app/main/default/objects/Targets__c/listViews/Swedish_Seat_Targets.listView-meta.xml
<ListView>
    <fullName>Swedish_Seat_Targets</fullName>
    <columns>NAME</columns>
    <columns>Target_Metric__c</columns>
    <columns>Week_Number__c</columns>
    <columns>Target__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>FA_SE</value>
    </filters>
    <filters>
        <field>Target_Metric__c</field>
        <operation>equals</operation>
        <value>Seats Booked</value>
    </filters>
    <label>Swedish Seat Targets</label>
</ListView>